add enabled field to task object
